# attention-matters

./: .fmmrc.json  .gitignore  .mcp.json  ACKNOWLEDGMENTS.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  MANIFOLD.md  PROJECT.md  Procfile.dev  README.md  justfile  release-please-config.json
.github/workflows/: ci.yml  release-please.yml  release.yml
.nancy/: config.json
.next/: trace  trace-build
chat/: .env.local.example  bun.lockb  package-lock.json  package.json
chat/src/app/: globals.css  layout.tsx  page.tsx  tokens.css
chat/src/app/api/models/: route.ts
chat/src/components/: providers.tsx
chat/src/components/chat/: chat-thread.tsx  composer.tsx  memory-panel.tsx  message.tsx  neighborhood-card.tsx  salient-teachable.tsx  salient-text.tsx  streaming-error.tsx  thread.tsx
chat/src/components/memory/: episode-detail.tsx  episode-list.tsx  feedback-buttons.tsx  memory-search.tsx  neighborhood-list.tsx  search-result.tsx  shared.ts  sidebar.tsx  stats-header.tsx
chat/src/components/settings/: model-picker.tsx  settings-bar.tsx  setup-card.tsx
chat/src/components/upload/: upload-button.tsx  upload-modal.tsx
chat/src/lib/: am-client.ts  am-runtime.ts  runtime.ts  settings.ts  sse-parser.ts  types.ts
crates/am-cli/: Cargo.toml  build.rs  tools.toml
crates/am-cli/src/: colors.rs  generated_help.rs  generated_schema.rs  http_server.rs  jsonrpc.rs  llm_proxy.rs  main.rs  server.rs  sync.rs  sync_dispatch.rs  sync_tests.rs
crates/am-cli/src/server/: activation.rs  episodes.rs  ingestion.rs  mod.rs  query.rs  server_tests.rs  system.rs
crates/am-cli/src/server/snapshots/: am__server__tests__am_activate_response.snap  am__server__tests__am_import.snap  am__server__tests__am_ingest.snap  am__server__tests__am_query.snap  am__server__tests__am_query_index.snap  am__server__tests__am_stats_empty.snap  am__server__tests__am_stats_with_content.snap
crates/am-cli/src/snapshots/: am__server__tests__am_batch_query.snap  am__server__tests__am_buffer.snap  am__server__tests__am_export.snap.new  am__server__tests__am_feedback_boost.snap.new  am__server__tests__am_retrieve.snap.new  am__server__tests__am_salient.snap
crates/am-cli/tests/: cli.rs  mcp_protocol_test.rs  shutdown.rs
crates/am-core/: Cargo.toml
crates/am-core/benches/: drift.rs
crates/am-core/src/: activation_stats.rs  batch.rs  compose.rs  compose_tests.rs  constants.rs  episode.rs  feedback.rs  lib.rs  neighborhood.rs  occurrence.rs  phasor.rs  quaternion.rs  query.rs  query_tests.rs  recency.rs  salient.rs  scoring.rs  serde_compat.rs  store_trait.rs  surface.rs  system.rs  time.rs  tokenizer.rs
crates/am-core/tests/: integration.rs  proptest.proptest-regressions  proptest.rs
crates/am-store/: Cargo.toml
crates/am-store/benches/: save_system.rs
crates/am-store/src/: config.rs  error.rs  json_bridge.rs  lib.rs  memory_store.rs  project.rs  schema.rs  store.rs
crates/am-store/src/store/: activation.rs  core.rs  forget.rs  gc.rs  load.rs  mod.rs  persist.rs  query.rs  tests.rs
docs.llm/: CODE_REVIEW_2026-03-21.md  CONFIG_MANAGEMENT.md  SPEC-config-hardening.md
npm/@alphab.io/am/: package.json
npm/@attention-matters/cli/: package.json
npm/attention-matters/: package.json
npm/attention-matters/scripts/: install.js
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
plugin/skills/memory/: SKILL.md
research/: agent-memory-prompting.md  competitor-memory-patterns.md  skills-vs-instructions.md  world-class-dx.md
scripts/: bench-gate.sh
