[workspace]
resolver = "3"
members = [
    "crates/am-core",
    "crates/am-store",
    "crates/am-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
am-core = { path = "crates/am-core" }
am-store = { path = "crates/am-store" }
rand = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmcp = { version = "0.15", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
clap = { version = "4", features = ["derive"] }
schemars = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
