[workspace]
resolver = "3"
members = [
    "crates/am-core",
    "crates/am-store",
    "crates/am-cli",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
am-core = { path = "crates/am-core" }
am-store = { path = "crates/am-store" }
rand = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
toml = "0.8"
thiserror = "2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
