[package]
name = "am-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI and MCP server for the DAE attention engine"

[[bin]]
name = "am"
path = "src/main.rs"

[dependencies]
am-core = { workspace = true }
am-store = { path = "../am-store" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
pulldown-cmark = { version = "0.13.1", default-features = false }
rustc-hash = "2"
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tokio-util = { workspace = true }
reqwest = { workspace = true }
eventsource-stream = { workspace = true }
futures-util = { workspace = true }
async-stream = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
insta = { version = "1", features = ["json", "redactions"] }
predicates = "3"
tempfile = "3"
