[package]
name = "am-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Persistence layer for am-core DAE state"

[dependencies]
am-core = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
