[package]
name = "am-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Persistence layer for am-core DAE state"

[dependencies]
am-core = { workspace = true }
rand = { workspace = true }
rusqlite = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
