[package]
name = "am-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Persistence layer for am-core DAE state"

[dependencies]
am-core = { workspace = true }
rand = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = { workspace = true }

[[bench]]
name = "save_system"
harness = false
